MAKE: replaced the old makefile with a cmake based one

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -9,40 +9,6 @@ on:
 name: "Build"
 
 jobs:
-  build-make:
-    runs-on: ${{ matrix.os }}
-    strategy:
-      matrix:
-        os:
-          - ubuntu-18.04
-          - windows-2019
-          - macos-10.15
-    env:
-      ARCHIVE: 1
-
-    steps:
-      - name: "Checkout"
-        uses: actions/checkout@v2
-
-      - name: "Install Dependencies (Linux)"
-        if: ${{ runner.os == 'Linux' }}
-        run: |
-          sudo apt-get update
-          sudo apt-get install libsdl2-dev
-
-      - name: "Install Dependencies (Windows)"
-        if: ${{ runner.os == 'Windows' }}
-        run: choco install zip
-
-      - name: "Compile"
-        run: make release
-
-      - name: "Upload artifacts"
-        uses: actions/upload-artifact@v2
-        with:
-          name: ${{ matrix.os }}
-          path: build/*.zip
-
   build-cmake:
     runs-on: ${{ matrix.os }}
     strategy:
@@ -73,3 +39,10 @@ jobs:
           cd build
           cmake .. -DCMAKE_BUILD_TYPE=Release
           cmake --build .
+          cmake --install . --prefix wop
+
+      - name: "Upload artifacts"
+        uses: actions/upload-artifact@v2
+        with:
+          name: ${{ matrix.os }}
+          path: build/wop/
