--- a/code/client/CMakeLists.txt
+++ b/code/client/CMakeLists.txt
@@ -75,6 +75,10 @@ else()
 	list(APPEND SRCS ../sys/con_tty.c)
 endif()
 
+if (USE_MUMBLE)
+	list(APPEND SRCS libmumblelink.c)
+endif()
+
 project(wop)
 add_executable(${PROJECT_NAME} ${SRCS})
 add_asm(${PROJECT_NAME})
@@ -95,12 +99,16 @@ else()
 	set(CMAKE_REQUIRED_LIBRARIES)
 	list(APPEND LIBS m rt)
 endif()
+list(APPEND LIBS curl)
 target_link_libraries(${PROJECT_NAME} ${LIBS})
 target_include_directories(${PROJECT_NAME} PRIVATE ${SDL2_INCLUDE_DIRS})
 if (USE_VOIP)
-	list(APPEND CLIENT_DEFINES -DUSE_VOIP)
+	list(APPEND CLIENT_DEFINES USE_VOIP)
+endif()
+if (USE_MUMBLE)
+	list(APPEND CLIENT_DEFINES USE_MUMBLE)
 endif()
 if (USE_RENDERER_DLOPEN)
-	list(APPEND CLIENT_DEFINES -DUSE_RENDERER_DLOPEN)
+	list(APPEND CLIENT_DEFINES USE_RENDERER_DLOPEN)
 endif()
 target_compile_definitions(${PROJECT_NAME} PRIVATE ${CLIENT_DEFINES})
