--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,6 +2,7 @@ cmake_minimum_required(VERSION 3.11)
 project(WorldOfPadman VERSION 1.6.1 LANGUAGES C ASM)
 
 include(CheckSymbolExists)
+include(CheckCCompilerFlag)
 
 set(CODE_DIR ${CMAKE_CURRENT_SOURCE_DIR}/code)
 set(LIBS_DIR ${CMAKE_CURRENT_SOURCE_DIR}/libs)
@@ -36,6 +37,26 @@ if (APPLE)
 	set(CMAKE_OSX_DEPLOYMENT_TARGET 10.9)
 	add_compile_definitions(MAC_OS_X_VERSION_MIN_REQUIRED=1070)
 endif()
+
+add_compile_definitions(PRODUCT_VERSION="${CMAKE_PROJECT_VERSION}")
+
+macro(check_compiler_flag flag)
+  string(REGEX REPLACE "[-=+]" "_" _flag ${flag})
+  string(TOUPPER ${_flag} _flagfinal)
+  check_c_compiler_flag("${flag}" COMPILER_SUPPORTS_${_flagfinal})
+  if (COMPILER_SUPPORTS_${_flagfinal})
+    set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} ${flag}")
+  endif()
+endmacro()
+
+check_compiler_flag(-Wformat=2)
+check_compiler_flag(-Wno-format-zero-length)
+check_compiler_flag(-Wformat-security)
+check_compiler_flag(-Wno-format-nonliteral)
+check_compiler_flag(-Wstrict-aliasing=2)
+check_compiler_flag(-Wmissing-format-attribute)
+check_compiler_flag(-Wdisabled-optimization)
+check_compiler_flag(-Werror-implicit-function-declaration)
 
 add_subdirectory(libs)
 add_subdirectory(code)
